# Autonomous-Color-Object-Retrieval-Robot

./: .gitignore  README.md
ComputerVision/: README.md
ComputerVision/object_detection/: package.xml  setup.py
ComputerVision/object_detection/launch/: object_detection_launch.py
ComputerVision/object_detection/object_detection/: navigate_to_block.py  object_publisher.py  tf2_transform.py
ComputerVision/object_detection_interface/: CMakeLists.txt  package.xml
ComputerVision/object_detection_interface/msg/: YoloInterface.msg
Design/: README.md  RPLidar+A2M10+adapter(1).stl  Sandwich plate v3(1).step  lidar base.ipt
Manipulator/: README.md
Manipulator/mycobot_ros2_team3/install/: local_setup.sh  setup.sh
Manipulator/mycobot_ros2_team3/install/mycobot_280/share/mycobot_280/: package.sh
Manipulator/mycobot_ros2_team3/log/: latest_build
Manipulator/mycobot_ros2_team3/mycobot_280/mycobot_280pi/: package.xml
Manipulator/mycobot_ros2_team3/mycobot_280/mycobot_280pi/launch/: slider_control_adaptive_gripper_headless.launch.py
Manipulator/mycobot_ros2_team3/mycobot_280/mycobot_280pi/mycobot_280pi/: Custom_Node_Control.py  Testing.py  realsense_yolo_realtime1.py
Navigation/: README.md
Navigation/leo_navigation_tutorial/config/: navigation.yaml  slam_toolbox.yaml
Navigation/mapping_bringup/: package.xml  setup.py
Navigation/mapping_bringup/launch/: mapping_bringup.launch.py
Navigation/nav2_wavefront_frontier_exploration/nav2_wfd/: wavefront_frontier.py
Navigation/rplidar_ros/launch/: rplidar_a2m12_launch.py  view_rplidar_a2m12_launch.py
(+18 files in other folders)
