<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapping_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ben@todo.todo">ben</maintainer>
  <license>TODO: License declaration</license> 

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>launch_xml</depend>
  <depend>ament_index_python</depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_wavefront_frontier_exploration</exec_depend>
  <exec_depend>leo_nav</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
